--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="profile">Profile</string>
     <string name="logout">Log Out</string>
     <string name="home">Home</string>
+    <string name="userProfile">User Profile</string>
 </resources>
